--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 # ----------------------- #
 
 url: http://mrcasals.github.com
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Mr. Casals
+subtitle: Probably the worst blog name ever
+author: mrcasals
 simple_search: http://google.com/search
-description:
+description: A personal blog written by Marc Riera (aka mrcasals, aka mrc2407)
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
@@ -58,13 +58,13 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter.ht
 # ----------------------- #
 
 # Github repositories
-github_user:
+github_user: mrcasals
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
 
 # Twitter
-twitter_user:
+twitter_user: mrcasals
 twitter_tweet_count: 4
 twitter_show_replies: false
 twitter_follow_button: true
