Change author name to show my real name instead of nickname

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 url: http://mrcasals.github.com
 title: Mr. Casals
 subtitle: Probably the worst blog name ever
-author: mrcasals
+author: Marc Riera
 simple_search: http://google.com/search
 description: A personal blog written by Marc Riera (aka mrcasals, aka mrc2407)
 
